--- a/backend/src/views/verificationEmail.hbs
+++ b/backend/src/views/verificationEmail.hbs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Congratulations</title>
+    <title>Congratulations </title>
     <style>
       body { margin: 0; padding: 0; font-family: 'Segoe UI', Roboto, Arial, sans-serif; background-color: #1a1d21;
       color: white; } .container { max-width: 960px; margin: 0 auto; padding: 20px; } .card { border-radius: 1rem;
@@ -21,11 +21,11 @@
             <h1>HI, <span style="color: #B6F09C"> {{username}} </span></h1>
             <p class="m-3">
               Please Verify that your email address is
-              <b style="color: #0f5a70"> {{email}} </b>, and you entered it when signing up for
-              <b style="color: #0f5a70"> This Company </b>
+              <b style="color: #0f5a70"> {{email}} </b>, and you entered it when signing up on
+              <b style="color: #0f5a70"> News App </b>
             </p>
             <div class="m-3 text-center">
-              <a class="btn btn-success" href="{{verifyURL}}" style="color: black">
+              <a class="btn btn-success" href="{{verificationPageURL}}" style="color: black">
                 Verify Email
               </a>
             </div>
@@ -56,7 +56,7 @@
           </p>
           <p style="font-size: 12px">best Regards</p>
         </div>
-        <p>Email: atifahmed</p>
+        <p>Atif Ahmed Shaikh</p>
       </footer>
 
     </div>
