fixing Password hashing issues

--- a/backend/src/views/verificationEmail.hbs
+++ b/backend/src/views/verificationEmail.hbs
@@ -31,6 +31,14 @@
             </div>
 
             <p class="m-3">
+              if given button not working please copy and past below lint
+              <br />
+              <a class="btn btn-success" href="{{verificationPageURL}}" style="color: black">
+                {{verificationPageURL}}
+              </a>
+              <br />
+            </p>
+            <p class="m-3">
               if you have not registered for this then please ignore the email
               <br />
               <br />
@@ -40,7 +48,7 @@
       </div>
       <footer class="footer">
         <div class="logo">
-          <img src="" alt="Timate Logo" />
+          <img src="" alt="shaikh Logo" />
         </div>
         <div>
           <p style="font-weight: bolder;">News-App</p>
@@ -49,7 +57,7 @@
               powered by
             </p>
             <div style="padding: 10px;">
-              <img src="" alt="Technics Lab Logo" />
+              <img src="" alt="shaikh Logo" />
               <b>Shaikh</b>
 
             </div>
